implement test apis to be able to render UI locally

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,10 +14,10 @@ management:
   endpoint:
     info:
       enabled: true
-spring:
-  boot:
-    admin:
-      client:
-        url: http://localhost:9999
+#spring:
+#  boot:
+#    admin:
+#      client:
+#        url: http://localhost:9999
   application:
     name: local-accelerator
