--- a/pom.xml
+++ b/pom.xml
@@ -32,11 +32,11 @@
       <scope>runtime</scope>
       <optional>true</optional>
     </dependency>
-    <dependency>
-      <groupId>de.codecentric</groupId>
-      <artifactId>spring-boot-admin-starter-client</artifactId>
-      <version>3.1.0</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>de.codecentric</groupId>-->
+<!--      <artifactId>spring-boot-admin-starter-client</artifactId>-->
+<!--      <version>3.1.0</version>-->
+<!--    </dependency>-->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-configuration-processor</artifactId>
